--- a/progettoiseo/eventi/templates/dettaglio_evento.html
+++ b/progettoiseo/eventi/templates/dettaglio_evento.html
@@ -28,9 +28,17 @@
                             <i class="fas fa-calendar-alt text-muted me-2"></i>
                             <strong>Data:</strong>
                             {% if event.inizio_evento and event.fine_evento %}
-                                Dal {{ event.inizio_evento|date:'d/m/Y H:i' }} al {{ event.fine_evento|date:'d/m/Y H:i' }}
+                                {% if event.solo_data %}
+                                    Dal {{ event.inizio_evento|date:'d/m/Y' }} al {{ event.fine_evento|date:'d/m/Y' }}
+                                {% else %}
+                                    Dal {{ event.inizio_evento|date:'d/m/Y H:i' }} al {{ event.fine_evento|date:'d/m/Y H:i' }}
+                                {% endif %}
                             {% elif event.inizio_evento %}
-                                {{ event.inizio_evento|date:'d/m/Y H:i' }}
+                                {% if event.solo_data %}
+                                    {{ event.inizio_evento|date:'d/m/Y' }}
+                                {% else %}
+                                    {{ event.inizio_evento|date:'d/m/Y H:i' }}
+                                {% endif %}
                             {% endif %}
                         </p>
                         <p class="mb-1">
