--- a/progettoiseo/eventi/templates/lista_eventi.html
+++ b/progettoiseo/eventi/templates/lista_eventi.html
@@ -81,9 +81,17 @@
                         <p class="text-muted small mb-2">
                             <i class="fas fa-calendar-alt me-1"></i>
                             {% if event.inizio_evento and event.fine_evento %}
-                                Dal {{ event.inizio_evento|date:'d/m/Y H:i' }} al {{ event.fine_evento|date:'d/m/Y H:i' }}
+                                {% if event.solo_data %}
+                                    Dal {{ event.inizio_evento|date:'d/m/Y' }} al {{ event.fine_evento|date:'d/m/Y' }}
+                                {% else %}
+                                    Dal {{ event.inizio_evento|date:'d/m/Y H:i' }} al {{ event.fine_evento|date:'d/m/Y H:i' }}
+                                {% endif %}
                             {% elif event.inizio_evento %}
-                                {{ event.inizio_evento|date:'d/m/Y H:i' }}
+                                {% if event.solo_data %}
+                                    {{ event.inizio_evento|date:'d/m/Y' }}
+                                {% else %}
+                                    {{ event.inizio_evento|date:'d/m/Y H:i' }}
+                                {% endif %}
                             {% endif %}
                         </p>
                         <!-- Luogo -->
