--- a/progettoiseo/pagine_statiche/templates/home.html
+++ b/progettoiseo/pagine_statiche/templates/home.html
@@ -132,8 +132,7 @@
         <div class="col-12 col-md-6">
             <div class="h-100">
                 <h2 class="h3 mb-4 text-success border-bottom pb-2">
-                    <i class="bi bi-calendar-event me-2"></i>Prossimi Eventi
-                </h2>
+                    <i class="bi bi-calendar-event me-2"></i>Eventi in Programma</h2>
 
                 {% if prossimi_eventi %}
                     {% for evento in prossimi_eventi %}
